0.7.5 (17.05.2017)
================
* increase table functions performance
* increase 'as.dichotomy'/'dummy' performance
* add 'indirect'/'indirect_list' - aliases for 'vars'/'vars_list'
* add 'mis_val' - alias for 'na_if'
* add 'unsafe' argument for *_fun/*_fun_df.
* improve 'lst' function
* numerous small bugfixes


0.7.1 (10.04.2017)
================
* make value labels support in the base R and other packages (via 'factor' for class 'labelled')
* radically improved performace for 'cro_*' and 'fre_*' due to 'data.table' under the hood
* multiple/nested banners/variables suppport in 'cro_*'
* add 'datatable' for tables representation in Shiny
* add 'htmlTables' for tables representation in RStudio viewer and for knitting to html
* add methods for `where` for vectors/matrices/lists
* less cryptic message about bad number of rows in `modify`/`modify_if`
* .N now is preferable to .n inside `modify` and etc.
* Functions for default dataset now invisibly return modified default dataset
* Fix logical arguments in boolean operations for criteria functions
* `%in_row%`/`%in_col%` are deprecated. Use `%row_in%`/`%col_in%` instead.
* NULL argument for criterion is removed. Use `not_na` instead.
* remove `default` argument in `ifs`. Use TRUE ~ default_value instead.
* add usual vectors functions additionally to infix versions.
* add 'do_repeat' function
* add functions for weighted statistics - 'w_mean', 'w_median', 'w_cor' and etc.
* add 'nest' function for creation nested tables.
* remove 'category', 'category_df' - use 'as.category' instead
* remove 'dichotomy', 'dichotomy1' - use 'dummy', 'dummy1' instead
* remove 'dichotomy_df', 'dichotomy_df1' - use 'as.dichotomy' instead
* remove labelled matrix support
* bugfixes



0.5.5 (19.10.2016)
================
* numerous bugfixes
* change behavior of `if_val()` - now it dowsn't copies old values by default. There are 'other' and 'copy' instead of dots.
* add `%n_i%`, `%n_d%` - names intersection and diffs